<resources>
    <string name="app_name">Pedometer</string>
    <string name="app_name_long">Privacy Friendly Pedometer</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Pedometer</string>
...
    <string name="more_info">More information can be found on:</string>
    <string name="about_third_party_libs">The app uses <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart from Philipp Jahoda</a> (Apache 2 License).</string>
    <string name="privacy_friendly">This application belongs to the Privacy Friendly Apps group developed by the research group SECUSO. Sourcecode licensed under GPLv3. Images copyright SECUSO and Google Inc.</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-activity-tracker">Github-Repo</a></string>
    <string name="url"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="summary_card_calories">cal</string>
    <string name="correct_steps">Correct steps</string>
    <string name="correct_steps_dialog_title">Correct steps</string>
    <string name="correct_steps_dialog_message">Please provide a new number of steps you walked.</string>
    <string name="hint_steps">Number of steps</string>
    <string name="pause_step_detection">Pause step detection</string>
    <string name="continue_step_detection">Continue step detection</string>

    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">This app can count your steps in background, provides you an overview about your walked steps and allows you to define custom walking modes and notifications if the achievement of your daily step goal is in danger.</string>
    <string name="help_functionality_step_counter_summary">The step counter counts your daily steps in background and can be disabled in the settings.</string>
    <string name="help_functionality_notification_heading">Permanent Notification</string>
    <string name="help_functionality_notification">Notification</string>
...
    <string name="slide_2_title">Customize</string>
    <string name="slide_2_desc">To improve the calculation of the calories you have burned by walking please customize your personal settings.</string>
    <string name="slide_2_desc_two">You can switch your current walking modes using the context menu in the toolbar.</string>
    <string name="slide_3_title">Notifications</string>
    <string name="slide_4_title">Widget</string>
    <string name="slide_4_desc">Add a widget to your homescreen to stay up to date about your walked steps.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string-array name="pref_default_notification_motivation_alert_messages">
        <item>Come on, it\'s time to walk!</item>
    </string-array>
    <string name="motivation_alert_empty">Set custom alert messages when the achievement of your daily step goal is in danger.\n\nThere will be no alert if no message exists.</string>
    <string name="motivation_alert_input_title">Set motivation alert message</string>
    <string name="motivation_alert_input_message">Set your own custom motivation alert. The app notifies you with one of your texts randomly.</string>
...
